unwrapped first click event around the other two...had to manually create buttons in html doc instead of in the first click event fixed some closing }

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@ h2 {
 }
 
 .charSel p {
-	margin-top: 75px;
-	font-size: 50px;
+	margin-top: 10px;
+	font-size: 30px;
 	color: red;
 }
 
